--- a/src/main/resources/templates/layouts/editview/editUserRight.html
+++ b/src/main/resources/templates/layouts/editview/editUserRight.html
@@ -151,7 +151,8 @@
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
+													<input type="button" value="Go back!" class="btn btn-danger"
+														onclick="history.back()">
 												</div>
 
 
@@ -160,10 +161,7 @@
 
 										</div>
 										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/userrights/list}" onclick='myFun()'>View All UserRights</a>
-										</div>
+										
 									</div>
 
 
