code commit@Rahul
form binding of issue slip form

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -205,7 +205,11 @@
 							Material Requisition</a></li>
 					<li><a th:href="@{/materialrequisition/approval}"><i class="fa fa-circle-o"></i>
 							Material Requisition Approval</a></li>
+							
+					<li><a th:href="@{/issuslip/}"><i class="fa fa-circle-o"></i>
+							Material Issue Slip</a></li>
 				</ul></li>
+
 
 
 
