--- a/src/main/resources/templates/layouts/Master/openIndent.html
+++ b/src/main/resources/templates/layouts/Master/openIndent.html
@@ -61,9 +61,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i>Purchase</a></li>
+							<li><a href="#">Material</a></li>
+							<li class="active">Open Indent</li>
 						</ol>
 					</section>
 
@@ -148,38 +148,38 @@
 												<div class="form-group col-md-4">
 													<label class="form-label">Urgency</label> <label
 														style="color: red">*</label> <select class="form-control"
-														id="" title="urgency" required>
+														id="" title="urgency" th:field="*{urgency}"  required>
 														<option value="">Select</option>
-														<option value="Most">Most Urgent</option>
-														<option value="Normal">Normal</option>
-														<option value="Ondate">As On Date</option>
+														<option value="M">Most Urgent</option>
+														<option value="N">Normal</option>
+														<option value="O">As On Date</option>
 													</select>
 												</div>
 
 												<div class="form-group col-md-4">
 													<label class="form-label">Purchase Type</label> <label
 														style="color: red">*</label> <select class="form-control"
-														id="" title="purchase type" required>
+														id="" title="purchase type" th:field="*{idOrSo}" required>
 														<option value="">Select</option>
-														<option value="Capex">Capex</option>
-														<option value="NonCapex">Non-Capex</option>
-														<option value="PettyRaw">Petty/Raw Material</option>
-														<option value="Trading">Trading</option>
+														<option value="C">Capex</option>
+														<option value="N">Non-Capex</option>
+														<option value="P">Petty/Raw Material</option>
+														<option value="O">Others</option>
 													</select>
 												</div>
 
 												<div class="form-group col-md-4">
 													<label for="inputAddress">Indent Type</label> <select
-														class="form-control" id="" title="urgency" required>
+														class="form-control" id="" title="indent type" th:field="*{indentsStatus}" required>
 
-														<option value="general" selected>General</option>
+														<option value="G" selected>General</option>
 
 
 													</select>
 												</div>
 												<div class="form-group col-md-8">
 													<label for="inputAddress">Remarks</label>
-													<textarea type="text" class="form-control"
+													<textarea class="form-control"
 														id="inputAddress" placeholder="Remarks"
 														th:field="*{remarks}" title="remarks"></textarea>
 												</div>
@@ -346,8 +346,8 @@
 																	title="currency code" id="indCurrencyCode0"
 																	name="opeIndentDetail[0].currencyCode" required>
 																		<option value="">Select</option>
-																		<option value="inr">INR</option>
-																		<option value="usd">USD</option>
+																		<option value="I">INR</option>
+																		<option value="U">USD</option>
 
 																</select></td>
 
@@ -369,7 +369,7 @@
 																<!-- total value inr-total value  -->
 																<td><input type="text"
 																	class="form-control form-control-sm"
-																	id="totalValueInr0" title="Salary" readonly></td>
+																	id="totalValueInr0" title="Salary" style="text-align: right" readonly></td>
 
 																<!--total value - inr -->
 																<td><input type="text"
@@ -382,7 +382,7 @@
 																<!-- requisition date -->
 																<td><input type="date"
 																	class="form-control form-control-sm" id="salaryTo"
-																	style="width: 145px" required></td>
+																	style="width: 145px" name="opeIndentDetail[0].indReqDate" required></td>
 
 
 
@@ -469,22 +469,22 @@
 
 																		+"<td><select class='select form-control form-control-sm itemContainer"+idIndex+"' id='indItemCode"+idIndex+"' title='item Name'name='opeIndentDetail[" + idIndex + "].indItemCode'required onchange='selectItem()'></select></td>"
 																		
-																		+ "<td><input type='text' class='form-control form-control-sm' id='qtyInStock"+idIndex+"' title='' required name='opeIndentDetail[" + idIndex + "].qtyInStock' readonly></td>"
+																		+ "<td><input type='text' class='form-control form-control-sm' id='qtyInStock"+idIndex+"' title='' required name='opeIndentDetail[" + idIndex + "].qtyInStock' style='text-align: right' readonly></td>"
 
-																		+ "<td><input type='text'class='form-control form-control-sm floatNumberField'id='qtyProcured"+idIndex+"' title=''name='opeIndentDetail[" + idIndex + "].qtyProcured' readonly></td>"
+																		+ "<td><input type='text'class='form-control form-control-sm floatNumberField'id='qtyProcured"+idIndex+"' title=''name='opeIndentDetail[" + idIndex + "].qtyProcured' style='text-align: right'  readonly></td>"
 
-																		+ "<td><input type='text'class='form-control form-control-sm' id='pipelineIndQty"+idIndex+"' title='' requiredname='opeIndentDetail[" +  idIndex + "].pipelineQty'></td>"
+																		+ "<td><input type='text'class='form-control form-control-sm' id='pipelineIndQty"+idIndex+"' title='' requiredname='opeIndentDetail[" +  idIndex + "].pipelineQty' style='text-align: right' ></td>"
 
-																		+ "<td><input type='text'class='form-control form-control-sm floatNumberField'id='indQty"+idIndex+"' min='18' title='Age from'required name='opeIndentDetail[" + idIndex + "].indQty' onkeyup='indentQtyValue()'>"
+																		+ "<td><input type='text'class='form-control form-control-sm floatNumberField'id='indQty"+idIndex+"' min='18' title='Age from'required name='opeIndentDetail[" + idIndex + "].indQty' style='text-align: right'  onkeyup='indentQtyValue()'>"
 
-																		+ "<td><input type='text' class='form-control form-control-sm' id='approvedQty"+idIndex+"' name='opeIndentDetail[" + idIndex + "].approvedQty'></td>"
-																		+ "<td><input type='text'class='form-control form-control-sm'id='indCurrencyCode"+idIndex+"' requiredtitle='max experience'name='opeIndentDetail[" + idIndex + "].currencyCode'></td>" //currency code 
-																		+ "<td><input type='text' class='form-control form-control-sm floatNumberField' id='itemRate"+idIndex+"' title='Technical Qualification' name='opeIndentDetail[" + idIndex + "].itemRate' onkeyup='indentItemRate()'></td>"
+																		+ "<td><input type='text' class='form-control form-control-sm' id='approvedQty"+idIndex+"' name='opeIndentDetail[" + idIndex + "].approvedQty' style='text-align: right' ></td>"
+																		+ "<td><select class='form-control form-control-sm' title='currency code id='indCurrencyCode0' name='opeIndentDetail[" + idIndex + "].currencyCode' required><option value=''>Select</option><option value='I'>INR</option><option value='U'>USD</option></select></td>" //currency code 
+																		+ "<td><input type='text' class='form-control form-control-sm floatNumberField' id='itemRate"+idIndex+"' title='Technical Qualification' name='opeIndentDetail[" + idIndex + "].itemRate' onkeyup='indentItemRate()' style='text-align: right' ></td>"
 																		+ "<td><input type='text' class='form-control form-control-sm' id='salaryTo'></td>" //units 
 																		
-																		+ "<td><input type='text' class='form-control form-control-sm floatNumberField' id='totalValueInr"+idIndex+"' requiredname='opeIndentDetail[" + idIndex + "].totalValue' readonly></td>"
-																		+ "<td><input type='text' class='form-control form-control-sm floatNumberField' id='totalValue"+idIndex+"' readonly></td>" //total value int
-																		+ "<td><input type='date' class='form-control form-control-sm' id='salaryTo' style='width: 145px' required></td>"
+																		+ "<td><input type='text' class='form-control form-control-sm floatNumberField' id='totalValueInr"+idIndex+"' required  style='text-align: right'  readonly></td>"
+																		+ "<td><input type='text' class='form-control form-control-sm floatNumberField' id='totalValue"+idIndex+"'  name='opeIndentDetail[" + idIndex + "].totalValue' style='text-align: right'  readonly></td>" //total value int
+																		+ "<td><input type='date' class='form-control form-control-sm' id='salaryTo' style='width: 150px' name='opeIndentDetail[" + idIndex + "].indReqDate' required></td>"
 																		+ "<td><input type='text' class='form-control form-control-sm' id='indPurpose0' required name='opeIndentDetail[" + idIndex + "].indPurpose'></td>");
 
 												$('#example').append(
