code commit@Rahul
data is not saving without fk (fixed)

--- a/src/main/resources/templates/layouts/Master/companyDetail.html
+++ b/src/main/resources/templates/layouts/Master/companyDetail.html
@@ -117,8 +117,8 @@
 																			th:field="*{compType}" id=""
 																			title="company type" required>
 
-																			<option value="dependent">Dependent</option>
-																			<option value="independent" selected>
+																			<option value="D">Dependent</option>
+																			<option value="I" selected>
 																				Independent</option>
 
 																		</select>
@@ -154,8 +154,8 @@
 																			th:field="*{calculateEsi}" id=""
 																			title="calculate esi" required>
 
-																			<option value="yes" selected>Yes</option>
-																			<option value="no">No</option>
+																			<option value="Y" selected>Yes</option>
+																			<option value="N">No</option>
 
 																		</select>
 
